2010-03-02
	* bugfix of and(), now the returning codings are correct.
	* Search a word in a gtext widget, e.g. searchWord().
	* New function of UpdateCoding().
	* New function of FileCodedByAnd().
	* bugfix of ClickHandlerFun().

2010-03-01
	* use more informative prefix in category memo.
	* make endMark of a coding visible when clicked.
	* delete enMark when delete a coding.
	
2010-02-29
	* RQDA2tm() is moved to new package of RQDAtm.
	* bugfix of new project button (Thanks Steven McEachern for reporting).
	
2010-02-27
	* Insert one code label instead of two. It is more readable.
	* Minor bugfix of "highlight coding with memo" in coding popup menu.

2010-02-26 (0.1-9 rev 233)
	* all widgets are enabled only if usable.
	
2010-02-25
	* rename some buttons: retrieval -> coding; add anno -> anno; mark and unmark in case tab -> link and unlink
	* buttons on project Tab is disabled unless a project is open.

2010-02-23
	* Various bugfixes: journal name with ' can be handled correctly.
	* add icon to annotation widget.
	* attribute should not contain ' any more.
	* file category can handle ' correctly.
	
2010-02-22
	* Various bugfixes of code name with ' in coding Tab.
	* Various bugfixes of code name with ' in code category Tab.
	* Various bugfixes of case name with ' in Case Tab.
	* Various bugfixes of file name with ' in Files Tab.
	* Change backup file name format to fname.timestamp.rqda.

2010-02-21
	* Click-handler for second half of code-mark.
	* update citation file according to new convention, using meta.
	* minor bugfixes of some Rd files. Tidy up various Rd files.
	* use pkg:::foo in  mergeCodes() and RQDA2tm() to pass docs checking.

2010-02-14
	* Add click handler to version and license.
	* Move some files to inst dir to make it consistent with convention.
	* New option "both" in "type of retrieval".

2010-02-13
	* fix a bug in AddToCodeCategory().

2010-02-02
	* Now can rename code directly from code category popup menu.

2010-02-01