@@ -59,7 +59,7 @@ div.vignettes a:hover {
 
 <h1>What is RQDA and its features?</h1>
 
-<P>RDQA is a <A HREF="http://www.r-project.org/">R</A> package for Qualitative Data Analysis, a <B>free</B> (free as freedom) qualitative analysis software application (<A HREF="License.html">New BSD style license</A>). It works both on the Windows, Linux/<A HREF="http://www.freebsd.org/">FreeBSD</A> and (probably) MacOS platforms. RQDA is an easy-to-use tool to assist in the analysis of textual data. At the present, it supports only plain text format data. All the information is stored in <A HREF="http://www.sqlite.org/">SQLite</A> database via the R package of <A HREF="http://cran.r-project.org/web/packages/RSQLite/index.html">RSQLite</A>. The GUI is based on <A HREF="http://www.ggobi.org/rgtk2/">RGtk2</A>, via the aid of <A HREF="http://cran.r-project.org/web/packages/gWidgetsRGtk2/index.html">gWidgetsRGtk2</A>. It includes a number of standard Computer-Aided Qualitative Data Analysis features. Besides, it seamlessly integrated with R, which means that a) statistical analysis on the coding is possible, and b) functions about data manipulation and analysis can be easily extended by writing R functions. To some extent, <B>RQDA and R makes an integrated platform for both quantitative and qualitative data analysis.</B>
+<P>RDQA is a <A HREF="http://www.r-project.org/">R</A> package for Qualitative Data Analysis, a <B>free</B> (free as freedom) qualitative analysis software application (<A HREF="License.html">BSD</A> license). It works both on the Windows, Linux/<A HREF="http://www.freebsd.org/">FreeBSD</A> and (probably) MacOS platforms. RQDA is an easy-to-use tool to assist in the analysis of textual data. At the present, it supports only plain text format data. All the information is stored in <A HREF="http://www.sqlite.org/">SQLite</A> database via the R package of <A HREF="http://cran.r-project.org/web/packages/RSQLite/index.html">RSQLite</A>. The GUI is based on <A HREF="http://www.ggobi.org/rgtk2/">RGtk2</A>, via the aid of <A HREF="http://cran.r-project.org/web/packages/gWidgetsRGtk2/index.html">gWidgetsRGtk2</A>. It includes a number of standard Computer-Aided Qualitative Data Analysis features. Besides, it seamlessly integrated with R, which means that a) statistical analysis on the coding is possible, and b) functions about data manipulation and analysis can be easily extended by writing R functions. To some extent, <B>RQDA and R makes an integrated platform for both quantitative and qualitative data analysis.</B>
 
 <p>By the GUI, it can:
 <li>Import documents from plain text or on-the-fly
@@ -105,8 +105,7 @@ div.vignettes a:hover {
   of RQDA, you can use this command after you have installed RQDA by
   the last command: <I>install.packages("RQDA",repos=" http://R-Forge.R-project.org")</I>.
 
-<li><B>Step five</B>, Launch RQDA by command <I>library(RQDA)</I> from within R. Then you can see the 
-<A HREF="screenshots/Main_Debian_linux.png" target="_blank">RQDA GUI</A>.
+<li><B>Step five</B>, Launch RQDA by command <I>library(RQDA)</I> from within R. Then you can see the RQDA <A HREF="screenshots/Main_Debian_linux.png" target="_blank">GUI</A>.
 
 <h1>Documentation</h1>
 <A HREF="documentation.html#manual" target="_blank">User Manual</A>
@@ -131,7 +130,7 @@ div.vignettes a:hover {
 <p>RQDA 0.1-8 is now on <A href ="http://cran.r-project.org/src/contrib/Archive/RQDA/" target="_blank">CRAN</a> (2009-09-20).
 <p>RQDA 0.1-7 is now on <A href ="http://cran.r-project.org/src/contrib/Archive/RQDA/" target="_blank">CRAN</a> (2009-04-28).
 <p>RQDA 0.1-6 is now on <A href ="http://cran.r-project.org/src/contrib/Archive/RQDA/" target="_blank">CRAN</a> (2008-12-30).
-<p>RQDA has been actively developed. You can click <A HREF="http://r-forge.r-project.org/plugins/scmsvn/viewcvs.php/pkg/inst/ChangeLog?root=rqda&view=markup">here</A> to see the new features. There are few known-bugs, click <A HREF="http://r-forge.r-project.org/plugins/scmsvn/viewcvs.php/pkg/inst/KnownBugs?root=rqda&view=markup">KnownBugskup</A> for details.
+<p>RQDA has been actively developed. You can click <A HREF="http://r-forge.r-project.org/plugins/scmsvn/viewcvs.php/pkg/RQDA/inst/ChangeLog?root=rqda&view=markup">here</A> to see the new features. There are few known-bugs, click <A HREF="http://r-forge.r-project.org/plugins/scmsvn/viewcvs.php/pkg/RQDA/inst/KnownBugs?root=rqda&view=markup">KnownBugs</A> for details.
 
 <h1>More Informaiton</h1>
 
